objects/BMCServiceDesk__ScanDetail__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__ExecutionStatusType__c</fullName>
        <description>To store the execution status keyword of the scan.</description>
        <label>Execution Status Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ExecutionStatus__c</fullName>
        <formula>CASE(BMCServiceDesk__ExecutionStatusType__c,
&apos;_STATUS_ASSIGNPAUSED_&apos;, $Label.bmcservicedesk__statusassignmentpaused, 
&apos;_STATUS_ASSIGNWAITING_&apos;, $Label.bmcservicedesk__statusassignmentwaiting,
&apos;_STATUS_ASSIGNSENT_&apos;, $Label.bmcservicedesk__statusassignmentsent,
&apos;_STATUS_ASSIGNOK_&apos;, $Label.bmcservicedesk__statusassigned,
&apos;_STATUS_REASSIGNWAITING_&apos;, $Label.bmcservicedesk__statusreassignmentwaiting,
&apos;_STATUS_UNASSIGNEDPAUSED_&apos;, $Label.bmcservicedesk__statusunassignmentpaused,
&apos;_STATUS_UNASSIGNEDWAITING_&apos;, $Label.bmcservicedesk__statusunassignmentwaiting,
&apos;_STATUS_UNASSIGNEDSENT_&apos;, $Label.bmcservicedesk__statusunassignmentsent,
&apos;_STATUS_UNASSIGNEDOK_&apos;, $Label.bmcservicedesk__statusunassigned,
&apos;_STATUS_UPDATEPAUSED_&apos;, $Label.bmcservicedesk__statusupdatepaused,
&apos;_STATUS_UPDATEWAITING_&apos;, $Label.bmcservicedesk__statusupdatewaiting,
&apos;_STATUS_UPDATESENT_&apos;, $Label.bmcservicedesk__statusupdatesent,
&apos;_STATUS_UPDATEOK_&apos;, $Label.bmcservicedesk__statusupdated,
&apos;_STATUS_EXECUTEDOK_&apos;, $Label.bmcservicedesk__statusexecuted,
&apos;_STATUS_EXECUTEFAILED_&apos;, $Label.bmcservicedesk__statusexecutionfailed,
&apos;_STATUS_ASSIGNPLANNED_&apos;, $Label.bmcservicedesk__statusassignmentplanned,
&apos;_STATUS_UPDATEPLANNED_&apos;, $Label.bmcservicedesk__statusupdateplanned,
&apos;_STATUS_REASSIGNPLANNED_&apos;, $Label.bmcservicedesk__statusreassignmentplanned,
&apos;_STATUS_CONFIGUREFAILURE_&apos;, $Label.bmcservicedesk__statusconfigurationfailed,
&apos;_STATUS_CONFIGUREDOK_&apos;, $Label.bmcservicedesk__statusconfigurationok,
&apos;_STATUS_EXECUTESCHEDULED_&apos;, $Label.bmcservicedesk__scanstatusexecutionscheduled,
&apos;_STATUS_EXECUTING_&apos;, $Label.bmcservicedesk__statusexecuting,
&apos;_STATUS_EXECUTEPENDING_&apos;, $Label.bmcservicedesk__statusexecutionpending,
&apos;&apos;, $Label.bmcservicedesk__notconfigured,
$Label.bmcservicedesk__psatnotapplicable)</formula>
        <label>Execution Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKScanConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store the reference of the scan configuration associated with the scan.</description>
        <label>Scan Configuration</label>
        <referenceTo>BMCServiceDesk__ScanConfiguration__c</referenceTo>
        <relationshipLabel>Scan Configurations</relationshipLabel>
        <relationshipName>Scan_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKScanner__c</fullName>
        <description>To store the reference of the scanner device for which the scan was created.</description>
        <label>Scanner</label>
        <referenceTo>BMCServiceDesk__Scanner__c</referenceTo>
        <relationshipLabel>Scan Details</relationshipLabel>
        <relationshipName>Scan_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the scan execution status and last status update time were synced during the synchronization cycle.</description>
        <label>Is Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastStatusUpdateTime__c</fullName>
        <description>To store last status update time of the scan.</description>
        <label>Last Status Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ScanId__c</fullName>
        <description>To store  Id of the scan.</description>
        <label>Scan Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ScanName__c</fullName>
        <description>To store the name of the scan.</description>
        <label>Scan Name</label>
        <type>TextArea</type>
    </fields>
    <label>Scan Detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>